samples/_failures_safe/1761429505_81cf5a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fe63e591.c: In function ‘main’:
./samples/SAFE/__tmp_fe63e591.c:140:5: error: expected declaration or statement at end of input
  140 |     if (!is_valid_input(input)) {
      |     ^~
./samples/SAFE/__tmp_fe63e591.c:140:5: error: expected declaration or statement at end of input
